--- a/beehive/index.html
+++ b/beehive/index.html
@@ -16,6 +16,13 @@
     <script src="js/managers/netManager.js"></script>
     <script src="js/managers/uiManager.js"></script>
     <script src="js/components/component.js"></script>
+    <script src="js/models/bee.js"></script>
+    <script src="js/models/address.js"></script>
+    <script src="js/models/comment.js"></script>
+    <script src="js/models/company.js"></script>
+    <script src="js/models/geo.js"></script>
+    <script src="js/models/post.js"></script>
+    <script src="js/models/todo.js"></script>
     <script src="js/components/mainComponent/mainComponent.js"></script>
     <script src="js/components/albumComponent/albumComponent.js"></script>
     <script src="js/components/beeActivityComponent/beeActivityComponent.js"></script>
@@ -53,6 +60,7 @@
 
 </head>
 <body>
-    
+    <h1 id="title">Project: beehive</h1>
+    <h2 id="title">Description: beehive</h2>
 </body>
 </html>
