--- a/beehive/index.html
+++ b/beehive/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beehive</title>
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap" rel="stylesheet">
+
+    <!-- gsap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
 
     <!-- Main JS -->
@@ -40,6 +45,7 @@
     <script src="js/components/todoComponent/todoComponent.js"></script>
     <script src="js/components/todosComponent/todosComponent.js"></script>
 
+    <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="js/components/mainComponent/mainComponent.css">
     <link rel="stylesheet" href="js/components/albumComponent/albumComponent.css">
@@ -60,7 +66,6 @@
 
 </head>
 <body>
-    <h1 id="title">Project: beehive</h1>
-    <h2 id="title">Description: beehive</h2>
+
 </body>
 </html>
