Album & photo models added

--- a/beehive/index.html
+++ b/beehive/index.html
@@ -29,6 +29,8 @@
     <script src="js/models/geo.js"></script>
     <script src="js/models/post.js"></script>
     <script src="js/models/todo.js"></script>
+    <script src="js/models/album.js"></script>
+    <script src="js/models/photo.js"></script>
     <script src="js/components/mainComponent/mainComponent.js"></script>
     <script src="js/components/albumComponent/albumComponent.js"></script>
     <script src="js/components/beeActivityComponent/beeActivityComponent.js"></script>
