navbarComponent & navbarButtonsComponent update

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="js/components/commentComponent/commentComponent.js"></script>
     <script src="js/components/loadingComponent/loadingComponent.js"></script>
     <script src="js/components/navbarComponent/navbarComponent.js"></script>
+    <script src="js/components/navbarComponent/navbarButtonComponent.js"></script>
     <script src="js/components/newCommentComponent/newCommentComponent.js"></script>
     <script src="js/components/newPostComponent/newPostComponent.js"></script>
     <script src="js/components/newTodoComponent/newTodoComponent.js"></script>
@@ -60,6 +61,7 @@
     <link rel="stylesheet" href="js/components/commentComponent/commentComponent.css">
     <link rel="stylesheet" href="js/components/loadingComponent/loadingComponent.css">
     <link rel="stylesheet" href="js/components/navbarComponent/navbarComponent.css">
+    <link rel="stylesheet" href="js/components/navbarComponent/navbarButtonComponent.css">
     <link rel="stylesheet" href="js/components/newCommentComponent/newCommentComponent.css">
     <link rel="stylesheet" href="js/components/newPostComponent/newPostComponent.css">
     <link rel="stylesheet" href="js/components/newTodoComponent/newTodoComponent.css">
