Album component update

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="js/models/photo.js"></script>
     <script src="js/components/mainComponent/mainComponent.js"></script>
     <script src="js/components/albumComponent/albumComponent.js"></script>
+    <script src="js/components/albumComponent/thumbnailComponent.js"></script>
     <script src="js/components/albumListComponent/albumListComponent.js"></script>
     <script src="js/components/beeActivityComponent/beeActivityComponent.js"></script>
     <script src="js/components/beeComponent/beeComponent.js"></script>
@@ -56,6 +57,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="js/components/mainComponent/mainComponent.css">
     <link rel="stylesheet" href="js/components/albumComponent/albumComponent.css">
+    <link rel="stylesheet" href="js/components/albumComponent/thumbnailComponent.css">
     <link rel="stylesheet" href="js/components/albumListComponent/albumListComponent.css">
     <link rel="stylesheet" href="js/components/beeActivityComponent/beeActivityComponent.css">
     <link rel="stylesheet" href="js/components/beeComponent/beeComponent.css">
