New comment component build

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script src="js/components/todoComponent/todoComponent.js"></script>
     <script src="js/components/todoListComponent/todoListComponent.js"></script>
     <script src="js/components/beeComponent/beeButtonComponent.js"></script>
+    <script src="js/components/progressComponent/progressComponent.js"></script>
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
@@ -75,6 +76,7 @@
     <link rel="stylesheet" href="js/components/todoComponent/todoComponent.css">
     <link rel="stylesheet" href="js/components/todoListComponent/todoListComponent.css">
     <link rel="stylesheet" href="js/components/beeComponent/beeButtonComponent.css">
+    <link rel="stylesheet" href="js/components/progressComponent/progressComponent.css">
 
 </head>
 
